Commit upon completing Section 4

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -9,7 +9,7 @@
       <mat-form-field>
          <input type="email"
                 matInput
-                placeholder="Your email"
+                placeholder="email"
                 formControlName="email">
          <mat-hint>Please enter a valid email</mat-hint>
          <mat-error>Invalid/missing email</mat-error>
@@ -18,7 +18,7 @@
       <mat-form-field>
          <input type="password"
                 matInput
-                placeholder="Your password"
+                placeholder="password"
                 formControlName="password">
          <mat-hint>Please enter your password</mat-hint>
          <mat-error>Missing password!</mat-error>
