--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<mat-sidenav-container>
+   <mat-sidenav #sidenav
+                role="navigation">
+      <app-sidenav-list (closeSidenav)="sidenav.close()"></app-sidenav-list>
 
-   <router-outlet></router-outlet>
+   </mat-sidenav>
+   <mat-sidenav-content>
+      <app-header (sidenavToggle)="sidenav.toggle()">
+
+      </app-header>
+      <main>
+         <router-outlet></router-outlet>
+      </main>
+   </mat-sidenav-content>
+</mat-sidenav-container>
