--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,3 +1,13 @@
-<p>
-  training works!
-</p>
+<mat-tab-group *ngIf="!ongoingTraining">
+   <mat-tab label="New Exercise">
+      <app-new-training (trainingStart)="ongoingTraining = true">
+      </app-new-training>
+   </mat-tab>
+   <mat-tab label="Past Exercises">
+      <app-past-training></app-past-training>
+   </mat-tab>
+</mat-tab-group>
+<!-- The trainingExit event is emitted by the dialog in stop-training if the user wants to stop training -->
+<app-current-training *ngIf="ongoingTraining"
+                      (trainingExit)="ongoingTraining = false">
+</app-current-training>
